<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CofE</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="vanilla">Vanilla Cream</string>
    <string name="decrement">-</string>
    <string name="initial_Quantity_Value">0</string>
    <string name="increment">+</string>
    <string name="quantity">Quantity</string>
    <string name="Coffee_flavours">Coffee flavours</string>
    <string name="name">Name</string>
    <string name="Order">Book Order</string>
    <string name="payment">Payment</string>
    <string name="price">Price</string>
    <string name="_100">₹100</string>
    <string name="_50">₹50</string>
    <string name="thank_you">Thank You</string>

    <string name="Order_Summary_Name">Name : <xliff:g examle="Mr. X" id="name">%s</xliff:g></string>
    <string name="Order_Summary_whipped_cream">Whipped Cream Coffee Quantity :<xliff:g examle="1" id="WhippedCream">%d</xliff:g></string>
    <string name="Order_Summary_Chocolate">Chocolate Coffee Quantity : <xliff:g examle="1" id="Chocolate">%d</xliff:g></string>
    <string name="Order_Summary_Vanilla">Vanilla Cream Coffee Quantity : <xliff:g examle="1" id="Vanilla">%d</xliff:g></string>
    <string name="Order_Summary_Quantity">Total Quantity : <xliff:g examle="2" id="quantity">%d</xliff:g></string>
    <string name="Order_Summary_Price">Total Price : ₹<xliff:g examle="₹200" id="Price">%d</xliff:g></string>
    <string name="Order_Summary_Email_Subject">Order for<xliff:g examle="Mr.X" id="name">%s</xliff:g></string>
    <string name="order_details">Order Details</string>


</resources>